# fraud-detection-pipeline

./: .env  .env.example  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  console-config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a3913a2fe953_create_transaction_events_and_fraud_.py
app/: main.py  models.py
app/api/: predict_schemas.py  routes.py  schemas.py
app/core/: config.py  db.py
app/ml/: model_loader.py  scoring.py
app/streaming/: kafka_producer.py
fraud_detection_pipeline.egg-info/: PKG-INFO  SOURCES.txt
models/: fraud_model.joblib  fraud_model.meta.joblib
tests/: conftest.py  test_health.py  test_transactions_integration.py
training/: train_baseline.py
worker/: consumer.py
